--- a/index.html
+++ b/index.html
@@ -59,7 +59,8 @@ Do you watch to [[begin game]] or watch a [[7 hour highlight reel]]
 
 
 &lt;img src=&quot;https://i.imgur.com/BBJuL1a.jpeg&quot; alt=&quot;LeBron Image&quot; /&gt;
-</tw-passagedata><tw-passagedata pid="4" name="Shawarma brothers" tags="" position="675,400" size="100,100">You&#39;re STEAK SHAWARMA. Ribeye, tomatoes and sumac onions your mom, However you mom does&#39;nt approve your school choice since your school is filled with crime 
+</tw-passagedata><tw-passagedata pid="4" name="Shawarma brothers" tags="" position="675,400" size="100,100">You&#39;re STEAK SHAWARMA. Ribeye, tomatoes, and sumac onions, your mom. However, your mom doesn&#39;t approve of your school choice since your school is filled with crime.
+ 
 
 &#39;&#39;YOUR MOTHER SUGGEST YOU TRANSFER&#39;&#39; 
 &#39;&#39;//WILL YOU TRANSFER YES OR NO //&#39;&#39;
@@ -69,7 +70,8 @@ Do you watch to [[begin game]] or watch a [[7 hour highlight reel]]
 
 
 &lt;img src=&quot;https://i.imgur.com/oDEmYwU.jpeg&quot; alt=&quot;LeBron Image&quot; /&gt;
-</tw-passagedata><tw-passagedata pid="5" name="Fred’s diner" tags="" position="800,400" size="100,100">You&#39;re Eating a chicken sandwhich your mom, However you mom does&#39;nt approve your school choice since your school is filled with crime 
+</tw-passagedata><tw-passagedata pid="5" name="Fred’s diner" tags="" position="800,400" size="100,100">You&#39;re eating a chicken sandwich with your mom; however, your mom doesn&#39;t approve of your school choice since your school is filled with crime. 
+
 
 YOUR MOTHER SUGGEST YOU TRANSFER 
 WILL YOU TRANSFER YES OR NO 
@@ -206,7 +208,7 @@ He scored 30 points in the next game and told the press how great of a leader yo
  
 &#39;&#39;You are now ranked 20th in the country as a 10th grader&#39;&#39;
 
-[[Sim to junior Year]]</tw-passagedata><tw-passagedata pid="23" name="Sim to junior Year" tags="" position="1075,1675" size="100,100">&#39;&#39;You&#39;re in your junior year you are at a party. You see a cute girl, you ask your friend about her and she is a sophmore at your school. &#39;&#39;
+[[Sim to junior Year]]</tw-passagedata><tw-passagedata pid="23" name="Sim to junior Year" tags="" position="1075,1675" size="100,100">&#39;&#39;You&#39;re in your junior year you are at a party. You see a cute girl, you ask your friend about her, and she is a sophmore at your school. &#39;&#39;
 
 [[Ask your friend for her number]]
 
@@ -361,7 +363,7 @@ Also You are now the number one player in the nation
 
 [[Go to college]]
 
-[[Declare for the NBA draft]]</tw-passagedata><tw-passagedata pid="39" name="Sim to play offs Freshman year" tags="" position="650,675" size="100,100">Your team is very good Yall won the state Championship Congrats 
+[[Declare for the NBA draft]]</tw-passagedata><tw-passagedata pid="39" name="Sim to play offs Freshman year" tags="" position="650,675" size="100,100">Your team is very good ya&#39;ll won the state Championship Congrats!!!
 [[Sim to Sophmore year]]
 
 
@@ -431,7 +433,9 @@ The day before the game Lebron gets a call from a NBA player to go to a party do
 
 Or 
 
-[[I&#39;m Good]] &#39;&#39;</tw-passagedata><tw-passagedata pid="46" name="Duh" tags="" position="650,2075" size="100,100">The Next day you Play melo you feel sick. He has a good game but you do not. Your team loses and his school is still number #1 in the nation 
+[[I&#39;m Good]] &#39;&#39;</tw-passagedata><tw-passagedata pid="46" name="Duh" tags="" position="650,2075" size="100,100">The next day you play Melo,, you feel sick. He has a good game,, but you do not. Your team loses,, and his school is still number one in the nation. 
+
+
 
 &#39;&#39;However You some how become the number # player &#39;&#39;
 
